--- a/www/lab/html/index.html
+++ b/www/lab/html/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Computer Networks 2023: Exercise 1</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         #moving-title {
             color: blue;
