--- a/www/lab/html/params_info.html
+++ b/www/lab/html/params_info.html
@@ -2,36 +2,47 @@
 <html>
 <head>
     <title>Forms Params</title>
-    <style>body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        color: #333;
-        line-height: 1.6;
-    }
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-    h1 {
-        color: #333;
-        background-color: #dcdcdc;
-        padding: 10px 0;
-        text-align: center;
-        margin: 0;
-    }
+        h1 {
+            color: #4CAF50;
+            font-size: 2.5em;
+        }
 
-    p {
-        padding: 5px 20px;
-        margin: 15px;
-        background-color: #fff;
-        border-left: 4px solid #333;
-    }
+        p {
+            color: #555;
+            font-size: 1.2em;
+        }
+
+        p::first-letter {
+            text-transform: uppercase;
+        }
+
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            width: 500px;
+            max-width: 90%;
+        }
     </style>
 </head>
 <body>
-<h1>Get your parms back</h1>
-<p>Sender:  {receiver}   </p>
-<p>Receiver:{sender}   </p>
-<p>Subject: {subject}   </p>
-<p>Message: {message}  </p>
+<div class="container">
+    <h1>Get your parms back</h1>
+    {content}
+</div>
 </body>
 </html>
