--- a/www/lab/html/params_info.html
+++ b/www/lab/html/params_info.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Get your parms back</h1>
+    <h1>Get your params back</h1>
     {content}
 </div>
 </body>
