--- a/www/lab/html/params_info.html
+++ b/www/lab/html/params_info.html
@@ -9,9 +9,6 @@
             color: #333;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
         }
 
@@ -29,7 +26,7 @@
             text-transform: uppercase;
         }
 
-        .container {
+        div {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -40,27 +37,6 @@
     </style>
 </head>
 <body>
-<script>
-function showFormData() {
-    var sender = document.getElementById("sender").value;
-    var receiver = document.getElementById("receiver").value;
-    var subject = document.getElementById("subject").value;
-    var message = document.getElementById("message").value;
-
-    var resultDiv = document.getElementById("container");
-
-    resultDiv.innerHTML = "Sender: " + sender + "<br>";
-    resultDiv.innerHTML += "Receiver: " + receiver + "<br>";
-    resultDiv.innerHTML += "Subject: " + subject + "<br>";
-    resultDiv.innerHTML += "Message: " + message + "<br>";
-
-    return false; // Prevent the default form submission
-}
-</script>
-
-<div class="container">
     <h1>Get your params back</h1>
-    {content}
-</div>
 </body>
 </html>
