--- a/www/lab/html/index.html
+++ b/www/lab/html/index.html
@@ -128,10 +128,15 @@
     <label for="subject">Subject:</label>
     <input type="text" id="subject" name="subject">
 
+    <label for="checkbox">Checkbox:</label>
+    <input type="checkbox" id="checkbox" name="checkbox">
+
     <label for="message">Message:</label>
     <textarea id="message" name="message" rows="4" cols="50"></textarea>
 
+
     <input type="submit" value="Submit">
 </form>
+
 </body>
 </html>
